--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script defer src="./script.js" type="module"></script>
 </head>
 <body>
-    <!-- Add this to your HTML body, outside of the wrapper div -->
 <div class="modal-overlay" id="createQuizModal">
     <div class="create-quiz-modal">
         <div class="modal-header">
@@ -124,11 +123,9 @@
         </div>
         <div class="menu-button">
             <button id="login">Sign In With Google</button>
+            <button id="Free-Trial">Play Free Trial</button>
         </div>
     </section>
 </div>
-    <!-- <div class="Login-text">
-        <h4>Login To See More Categories</h4>
-    </div> -->
 </body>
 </html>
